# mecha-ferris

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  calibrations.txt
.github/workflows/: rust.yml
Android/: build.gradle.kts  settings.gradle  settings.gradle.kts
Android/app/: build.gradle  build.gradle.kts
Android/app/src/androidTest/java/com/mechaferris/mechaferris/: ExampleInstrumentedTest.kt
Android/app/src/androidTest/java/paulfaria/mechaferris/: ExampleInstrumentedTest.kt  RustLibraryTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/mechaferris/mechaferris/: BleService.kt  Connected.kt  ConnectedViewModel.kt  Constants.kt  DataTypes.kt  MainActivity.kt
Android/app/src/main/java/com/mechaferris/mechaferris/data/: CalibrationRepository.kt  CalibrationSerializer.kt
Android/app/src/main/java/com/mechaferris/mechaferris/utils/: Mutex.kt
Android/app/src/main/java/paulfaria/mechaferris/: Activity.kt  BleService.kt  Connected.kt  ConnectedViewModel.kt  Constants.kt  CoroutineScope.kt  DataTypes.kt  MainActivity.kt  RustBindings.kt  Scanner.kt
Android/app/src/main/java/paulfaria/mechaferris/data/: CalibrationRepository.kt  CalibrationSerializer.kt
Android/app/src/main/java/paulfaria/mechaferris/icons/: BluetoothDisabled.kt  LocationDisabled.kt
Android/app/src/main/java/paulfaria/mechaferris/ui/calibrating/: CalibratingView.kt  DashboardViewModel.kt
Android/app/src/main/java/paulfaria/mechaferris/ui/controls/: ControlsView.kt  NotificationsViewModel.kt
Android/app/src/main/java/paulfaria/mechaferris/utils/: Mutex.kt
Android/app/src/main/proto/com/mechaferris/calibration/: calibration.proto
Android/app/src/main/proto/paulfaria/mechaferris/calibration/: calibration.proto
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/mechaferris/mechaferris/: ExampleUnitTest.kt
Android/app/src/test/java/paulfaria/mechaferris/: ExampleUnitTest.kt  RustLibraryTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
android-integration-testing/: Cargo.toml  makefile
android-integration-testing/.cargo/: config2.toml
android-integration-testing/jni/: Cargo.toml  build.rs
android-integration-testing/jni/.cargo/: config
android-integration-testing/jni/src/: lib.rs
android-integration-testing/kotlin/: Main.kt  Rust.kt
android-integration-testing/manager/: Cargo.toml
android-integration-testing/manager/src/: command.rs  io.rs  lib.rs  system.rs
bevy_sim/: Cargo.toml
bevy_sim/src/: main.rs  world.rs
bluetooth-comms/: Cargo.toml
bluetooth-comms/src/: lib.rs  log.rs  wrappers.rs
calibrator/: Cargo.toml
calibrator/.cargo/: config.toml
calibrator/src/: calibrations.rs  debouncer.rs  main.rs
communication/: Cargo.toml
communication/proptest-regressions/: tests.txt
communication/src/: lib.rs  tests.rs
documentation/diagrams/: comms.wsd  components.dot
free-cad/: .gitignore  MechaFerris.FCStd  MechaFerris.FCStd1
free-cad/bearings.step/: BB-01.STEP  BB-02.STEP  BB-03.STEP
free-cad/gltf/: MechaFerris-BearingSpacer.gltf  MechaFerris-CoxaFemurConnector.gltf  MechaFerris-FlangedBearing.gltf  MechaFerris-ServoHolder.gltf  MechaFerris-ServoModel.gltf
kinematics/: Cargo.toml  README.md
kinematics/src/: animation.rs  leg.rs  lib.rs  walking.rs
kinematics/src/leg/: leg_tests.rs
mecha-ferris/: Cargo.toml  README.md
mecha-ferris/.cargo/: config.toml
mecha-ferris/examples/: servo_tester.rs
mecha-ferris/src/: analog.rs  analog_mux.rs  calibrations.rs  comms.rs  data.rs  debouncer.rs  flexible_input.rs  homing.rs  joint.rs  lib.rs  log.rs  main.rs  rtic_main.rs
nrf-comms/: Cargo.toml  build.rs  memory.x
nrf-comms/.cargo/: config.toml
nrf-comms/src/: bonder.rs  command.rs  consts.rs  log.rs  main.rs  server.rs  services.rs  wrappers.rs
rust-avr/: Cargo.toml
rust-avr/src/: main.rs  servo.rs
rust-avr/src/servo/: hs311.rs  mg90d.rs
simulator/: Makefile.toml  README.md
simulator/godot/: export_presets.cfg  project.godot
simulator/godot/.import/: godot-ferris-1024x1024.png-ee64a17decf901492637656e83e65502.md5  godot-ferris-1024x1024.png-ee64a17decf901492637656e83e65502.stex  godot-ferris-120x120.png-be26d129cdb0483de5a9035f4c0b5657.md5  godot-ferris-120x120.png-be26d129cdb0483de5a9035f4c0b5657.stex  godot-ferris-128x128.png-84c11b8cbe62577ce1f7c57a00bfc544.md5  godot-ferris-128x128.png-84c11b8cbe62577ce1f7c57a00bfc544.stex  godot-ferris-16x16.png-7ab54e40b975d856efa5d870d0c8e443.md5  godot-ferris-16x16.png-7ab54e40b975d856efa5d870d0c8e443.stex  godot-ferris-32x32.png-0271578bfe3df43a7ffc305c5d64424e.md5  godot-ferris-32x32.png-0271578bfe3df43a7ffc305c5d64424e.stex  godot-ferris-64x64.png-2d1d24fec018ad234bda8515899932dd.md5  godot-ferris-64x64.png-2d1d24fec018ad234bda8515899932dd.stex  godot-ferris-76x76.png-b1a6decb5b0d0dcaddcbcd7e3e5b3eb8.md5  godot-ferris-76x76.png-b1a6decb5b0d0dcaddcbcd7e3e5b3eb8.stex
simulator/godot/native/: Servo.gdns  Walker.gdns  game.gdnlib
simulator/godot/scenes/: Camera.gd  Game.tscn  Leg.tscn  MechaFerris-BearingBracket.gltf  MechaFerris-BearingBracket.gltf.import  MechaFerris-BearingSpacer.gltf.import  MechaFerris-CoxaFemurConnector.gltf.import  MechaFerris-FemurBracket.gltf  MechaFerris-FemurBracket.gltf.import  MechaFerris-FlangedBearing.gltf.import  MechaFerris-HornBracket.gltf  MechaFerris-HornBracket.gltf.import  MechaFerris-MG90s_Arm01.gltf  MechaFerris-MG90s_Arm01.gltf.import  MechaFerris-ServoHolder.gltf.import  MechaFerris-ServoModel.gltf.import  MechaFerris-Tibia001.gltf  MechaFerris-Tibia001.gltf.import  Test.tscn  Walker.tscn  mat_0.material  mat_1.material  mat_2.material  mat_3.material  mat_4.material  mat_5.material  mat_6.material  mat_7.material
simulator/rust/: Cargo.toml
simulator/rust/src/: animation.rs  game.rs  lib.rs  multi_leg.rs  servo.rs  walker.rs
state/: Cargo.toml  cargo-test-71974-5659690347647683530_0.profraw  cargo-test-71978-5659690347647683530_0.profraw
state/src/: lib.rs
(+14 files in other folders)
