[package]
name = "bevy_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
kinematics = { path = "../kinematics" }
bevy = { version = "0.14.2", default-features = false, features = [
    "wayland",
    "default_font",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_scene",
    "bevy_sprite",
    "bevy_gltf",
    "tonemapping_luts",
    "bevy_ui",
    "ktx2",
    "jpeg",
    "png",
] }
bevy_mod_picking = { version = "0.20.1", features = ["backend_avian"] }
bevy_editor_pls = "0.10.0"
avian3d = { version = "0.1.2", default-features = false, features = [
    "bevy_scene",
    "collider-from-mesh",
    "debug-plugin",
    "parallel",
] }
parry3d = { version = "0.17.2" }
cached-path = { version = "0.6.1" }
