[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.0"
state = { path = "../state" }
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"] }

[dev-dependencies]
proptest = "1.1.0"
test-case = "3.1.0"