[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
state = { path = "../state" }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
nalgebra = { version = "0.32.2", default-features = false, features = [
    "serde-serialize-no-std",
] }
postcard = "1.0.8"


[dev-dependencies]
proptest = "1.1.0"
test-case = "3.1.0"
ssmarshal = "1.0.0"

[features]
defmt = ["dep:defmt", "state/defmt"]
