[package]
edition = "2021"
name = "mecha-ferris"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
critical-section = "1.1.0"
defmt = { version = "0.3.5", optional = true }
defmt-rtt = { version = "0.4", optional = true }
fugit = "0.3.6"
panic-halt = { version = "0.2.0", optional = true }
panic-probe = { version = "0.3", optional = true }
nb = "1.0.0"
pimoroni-servo2040 = "0.4.0"
smart-leds = "0.3.0"
ws2812-pio = "0.7.0"
servo-pio = { version = "0.2.1" }
kinematics = { path = "../kinematics" }
communication = { path = "../communication" }
state = { path = "../state" }
postcard = { version = "1.0.8", features = ["heapless"] }
heapless = "0.7.0"

[features]
default = ["panic-halt"]
defmt = [
    "dep:defmt",
    "defmt-rtt",
    "servo-pio/defmt",
    "communication/defmt",
    "kinematics/defmt",
    "panic-probe/print-defmt",
    "postcard/use-defmt",
]
debug-visitor = ["defmt"]
debug-current = ["defmt"]

[[example]]
name = "servo_tester"
required-features = ["defmt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
