[package]
name = "nrf-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
futures = { version = "0.3.27", default-features = false }
byte-strings-proc_macros = "0.3.1"
critical-section = "1.1.1"
state = { path = "../state" }
communication = { path = "../communication" }
nalgebra = { version = "0.32.2", default-features = false }
scapegoat = "2.3.0"
static_cell = "1.0.0"
bluetooth-comms = { path = "../bluetooth-comms" }


[features]
defmt = ["dep:defmt", "defmt-rtt", "communication/defmt"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "a47fb42962fffda51efbce072087c8ca2504a225"
features = [
    "defmt",
    "nightly",
    "integrated-timers",
    "executor-thread",
    "arch-cortex-m",
]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
rev = "a47fb42962fffda51efbce072087c8ca2504a225"
features = ["defmt", "nightly"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "a47fb42962fffda51efbce072087c8ca2504a225"
features = ["defmt", "nightly", "defmt-timestamp-uptime"]

[dependencies.embassy-nrf]
git = "https://github.com/embassy-rs/embassy.git"
rev = "a47fb42962fffda51efbce072087c8ca2504a225"
features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "nightly"]

[dependencies.nrf-softdevice]
git = "https://github.com/embassy-rs/nrf-softdevice.git"
rev = "6415c63ac171f6f34f0ce0f08290d52b5cfa2a06"
features = [
    "nightly",
    "defmt",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "ble-central",
    "critical-section-impl",
    "ble-gatt-server",
]

[dependencies.nrf-softdevice-s140]
git = "https://github.com/embassy-rs/nrf-softdevice.git"
rev = "6415c63ac171f6f34f0ce0f08290d52b5cfa2a06"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2.git", rev = "64b4608278be46fcc8d63ae1138da8cb600e258a" } # version = "=1.0.66" }
