[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

[features]
default = []
defmt = ["dep:defmt"]
