[package]
name = "android-integration-testing"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_kotlin"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
bluetooth-comms = { path = "../../bluetooth-comms" }
manager = { path = "../manager" }
anyhow = "1.0.75"

[build-dependencies]
manager = { path = "../manager" }
