[package]
name = "mecha_ferris_simulator"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gdnative = "0.11.0"
kinematics = { path = "../../kinematics", features = ["std"]}
state = { path = "../../state" }
